New in Version 5.0RC1 (2/2009) ------------------------------
- New AribaWeb.org Website!
    - For the public launch of AribaWeb 5 (with this Release Candidate milestone) we have a new,
      vastly improved, web site.
    - New Product info pages, Updated Doc, new FAQ

- MetaUI
    - Multi-threading fixes: now can perform fully concurrent access without locking
    - Rule matching performance improvements, rule indexing memory reduction
        - Performance: > 500K context-ops/sec (2.3MHz Core Duo)
    - Rapid turnaround fixes:  parse errors keep previous rules, reload after error works
    - Support for scoped rules (e.g. when layout=Tabs appears inside layout=Inspect)
    - Better error tolerance, more friendly error handling
        - Parse errors shown in red debug bar -- no exception page
        - No component error renders info inline -- no exception page
        - Clearer context formatting in exception traces
    - Easier to make newly declared actions and fields visible (no actionCategory required for actions)
    - Trait for File and byte[] fields: imageData trait for diplaying file as image
        - New FileUploadChooser component; automatic client-side fix to form enctype if upload present

- IDE Plugins
    - IDEA plug-in updated for IDEA 8.x compatibility

- New AWStaticSiteGenerator
    - Can generate static HTML version of simple navigation-oriented sites
        - Used to generate new aribaweb.org site (from java-free metaui + markdown specified app!)
    - Markdown / HTMLActionFilter improvements: can turn relative links in Markdown doc into meta action invocations

- Deployment fixes
    - App runs with AW Debug mode disabled by default if deployed outside of dev-time build system
    - Fix bad resource path for widgets_all.js when run in non-debug mode

- Demo / Example improvements
    - Documentation Search has better java-source-friendly tokenizer
    - New Master-Detail example replaces MetaDB

- Many misc AribaWeb / Widgets bug fixes
  